TP4/obj/TP4.output
Estado 5 conflictos: 2 reducción(ones)/reducción(ones)
Estado 14 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 32 conflictos: 1 desplazamiento/reducción, 2 reducción/reducción
Estado 111 conflictos: 3 reducción(ones)/reducción(ones)
Estado 119 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 120 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 123 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 326 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: unidad_de_programa $end

    1 unidad_de_programa: /* vacío */

    2 $@1: /* vacío */

    3 unidad_de_programa: unidad_de_programa $@1 unidad_de_traduccion

    4 unidad_de_traduccion: declaracion_externa
    5                     | sentencia
    6                     | ERROR_LEXICO

    7 $@2: /* vacío */

    8 unidad_de_traduccion: error $@2 unidad_de_traduccion

    9 declaracion_externa: definicion_de_funcion
   10                    | declaracion

   11 $@3: /* vacío */

   12 definicion_de_funcion: especificadores_de_declaracion declarador lista_de_declaracion $@3 sentencia_compuesta

   13 $@4: /* vacío */

   14 definicion_de_funcion: declarador lista_de_declaracion $@4 sentencia_compuesta

   15 $@5: /* vacío */

   16 definicion_de_funcion: especificadores_de_declaracion declarador $@5 sentencia_compuesta

   17 $@6: /* vacío */

   18 definicion_de_funcion: declarador $@6 sentencia_compuesta

   19 declaracion: especificadores_de_declaracion lista_declaradores_init ';'
   20            | especificadores_de_declaracion ';'

   21 lista_de_declaracion: declaracion
   22                     | lista_de_declaracion declaracion

   23 especificadores_de_declaracion: ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO especificadores_de_declaracion_o_vacio
   24                               | especificador_de_tipo especificadores_de_declaracion_o_vacio
   25                               | CALIFICADOR_DE_TIPOS especificadores_de_declaracion_o_vacio

   26 especificadores_de_declaracion_o_vacio: especificadores_de_declaracion
   27                                       | /* vacío */

   28 especificador_de_tipo: ESPECIFICADOR_DE_TIPOS
   29                      | especificador_estructura_o_union
   30                      | especificador_enum
   31                      | TYPEDEF

   32 $@7: /* vacío */

   33 especificador_estructura_o_union: a '{' $@7 lista_declaraciones_struct '}'
   34                                 | a

   35 a: ESPECIFICADOR_STRUCT_UNION IDENTIFICADOR
   36  | ESPECIFICADOR_STRUCT_UNION

   37 lista_declaraciones_struct: declaracion_struct
   38                           | lista_declaraciones_struct declaracion_struct

   39 lista_declaradores_init: declarador_init
   40                        | lista_declaradores_init ',' declarador_init

   41 declarador_init: declarador
   42                | declarador '=' inicializador

   43 declaracion_struct: lista_calificador_especificador lista_declaradores_struct ';'

   44 lista_calificador_especificador: especificador_de_tipo lista_calificador_especificador
   45                                | especificador_de_tipo
   46                                | CALIFICADOR_DE_TIPOS lista_calificador_especificador
   47                                | CALIFICADOR_DE_TIPOS

   48 lista_declaradores_struct: declarador_struct
   49                          | lista_declaradores_struct ',' declarador_struct

   50 declarador_struct: declarador
   51                  | declarador ':' expresion_condicional
   52                  | ':' expresion_condicional

   53 especificador_enum: ENUM IDENTIFICADOR '{' lista_de_enumerador '}'
   54                   | ENUM '{' lista_de_enumerador '}'
   55                   | ENUM IDENTIFICADOR

   56 lista_de_enumerador: enumerador
   57                    | lista_de_enumerador ',' enumerador

   58 enumerador: IDENTIFICADOR

   59 $@8: /* vacío */

   60 enumerador: IDENTIFICADOR $@8 '=' expresion_condicional

   61 declarador: apuntador declarador_directo
   62           | declarador_directo

   63 $@9: /* vacío */

   64 declarador_directo: IDENTIFICADOR $@9 R_declarador_directo
   65                   | '(' declarador ')' R_declarador_directo

   66 R_declarador_directo: '[' expresion_condicional ']' R_declarador_directo
   67                     | '[' ']' R_declarador_directo

   68 $@10: /* vacío */

   69 R_declarador_directo: '(' $@10 lista_tipos_de_parametro ')' R_declarador_directo

   70 $@11: /* vacío */

   71 R_declarador_directo: '(' $@11 lista_de_identificadores ')' R_declarador_directo

   72 $@12: /* vacío */

   73 R_declarador_directo: '(' $@12 ')' R_declarador_directo
   74                     | /* vacío */

   75 apuntador: '*' apuntador_aux

   76 apuntador_aux: apuntador apuntador_aux2
   77              | apuntador_aux2

   78 apuntador_aux2: lista_calificadores_de_tipo
   79               | /* vacío */

   80 lista_calificadores_de_tipo: CALIFICADOR_DE_TIPOS
   81                            | lista_calificadores_de_tipo CALIFICADOR_DE_TIPOS

   82 lista_tipos_de_parametro: lista_de_parametros
   83                         | lista_de_parametros ',' TRES_PUNTOS

   84 lista_de_parametros: declaracion_de_parametro
   85                    | lista_de_parametros ',' declaracion_de_parametro

   86 declaracion_de_parametro: especificadores_de_declaracion declarador
   87                         | especificadores_de_declaracion declarador_abstracto
   88                         | especificadores_de_declaracion

   89 lista_de_identificadores: IDENTIFICADOR
   90                         | lista_de_identificadores ',' IDENTIFICADOR

   91 inicializador: expresion_de_asignacion
   92              | '{' lista_de_inicializadores '}'
   93              | '{' lista_de_inicializadores ',' '}'

   94 lista_de_inicializadores: inicializador
   95                         | lista_de_inicializadores ',' inicializador

   96 nombre_de_tipo: lista_calificador_especificador declarador_abstracto
   97               | lista_calificador_especificador

   98 declarador_abstracto: apuntador
   99                     | apuntador declarador_abstracto_directo
  100                     | declarador_abstracto_directo

  101 declarador_abstracto_directo: '(' declarador_abstracto ')'
  102                             | declarador_abstracto_directo '[' expresion_condicional ']'
  103                             | '[' expresion_condicional ']'
  104                             | declarador_abstracto_directo '[' ']'
  105                             | '[' ']'
  106                             | declarador_abstracto_directo '(' lista_tipos_de_parametro ')'
  107                             | '(' lista_tipos_de_parametro ')'
  108                             | declarador_abstracto_directo '(' ')'
  109                             | '(' ')'

  110 sentencia: sentencia_etiquetada
  111          | sentencia_expresion
  112          | sentencia_compuesta
  113          | sentencia_de_seleccion
  114          | sentencia_de_iteracion
  115          | sentencia_de_salto

  116 $@13: /* vacío */

  117 sentencia_etiquetada: IDENTIFICADOR $@13 ':' sentencia

  118 $@14: /* vacío */

  119 sentencia_etiquetada: CASE $@14 expresion_condicional ':' sentencia

  120 $@15: /* vacío */

  121 sentencia_etiquetada: DEFAULT $@15 ':' sentencia

  122 sentencia_expresion: expresion ';'
  123                    | ';'

  124 sentencia_compuesta: '{' X '}'
  125                    | '{' Z '}'

  126 X: lista_de_declaracion Y
  127  | /* vacío */

  128 Y: lista_de_sentencias X
  129  | /* vacío */

  130 Z: lista_de_sentencias X

  131 lista_de_sentencias: sentencia
  132                    | lista_de_sentencias sentencia

  133 $@16: /* vacío */

  134 sentencia_de_seleccion: IF $@16 '(' expresion ')' sentencia sentencia_de_seleccion_aux

  135 $@17: /* vacío */

  136 sentencia_de_seleccion: SWITCH $@17 '(' expresion ')' sentencia

  137 $@18: /* vacío */

  138 sentencia_de_seleccion_aux: ELSE $@18 sentencia
  139                           | /* vacío */

  140 $@19: /* vacío */

  141 sentencia_de_iteracion: WHILE $@19 '(' expresion ')' sentencia

  142 $@20: /* vacío */

  143 sentencia_de_iteracion: DO $@20 sentencia WHILE '(' expresion ')' ';'

  144 $@21: /* vacío */

  145 sentencia_de_iteracion: FOR $@21 '(' expresion_o_vacio ';' expresion_o_vacio ';' expresion_o_vacio ')' sentencia

  146 expresion_o_vacio: expresion
  147                  | /* vacío */

  148 sentencia_de_salto: GOTO IDENTIFICADOR ';'
  149                   | CONTINUE_O_BREAK ';'

  150 $@22: /* vacío */

  151 sentencia_de_salto: RETURN $@22 expresion ';'
  152                   | RETURN ';'

  153 expresion: expresion_de_asignacion
  154          | expresion ',' expresion_de_asignacion

  155 expresion_de_asignacion: expresion_condicional
  156                        | expresion_unaria operador_de_asignacion expresion_de_asignacion

  157 operador_de_asignacion: OPERADOR_ASIGNACION
  158                       | '='

  159 expresion_condicional: expresion_logica_or
  160                      | expresion_logica_or '?' expresion ':' expresion_condicional

  161 expresion_logica_or: expresion_logica_and
  162                    | expresion_logica_or OR expresion_logica_and

  163 expresion_logica_and: expresion_or_inclusivo
  164                     | expresion_logica_and AND expresion_or_inclusivo

  165 expresion_or_inclusivo: expresion_or_exclusivo
  166                       | expresion_or_inclusivo '|' expresion_or_exclusivo

  167 expresion_or_exclusivo: expresion_and
  168                       | expresion_or_exclusivo '^' expresion_and

  169 expresion_and: expresion_de_igualdad
  170              | expresion_and '&' expresion_de_igualdad

  171 expresion_de_igualdad: expresion_relacional
  172                      | expresion_de_igualdad IGUAL_O_DISTINTO expresion_relacional

  173 expresion_relacional: expresion_de_corrimiento
  174                     | expresion_relacional SIMBOLO_RELACIONAL expresion_de_corrimiento

  175 expresion_de_corrimiento: expresion_aditiva
  176                         | expresion_de_corrimiento SIMBOLO_CORRIMIENTO expresion_aditiva

  177 expresion_aditiva: expresion_multiplicativa
  178                  | expresion_aditiva '+' expresion_multiplicativa
  179                  | expresion_aditiva '-' expresion_multiplicativa

  180 expresion_multiplicativa: expresion_cast
  181                         | expresion_multiplicativa '*' expresion_cast
  182                         | expresion_multiplicativa '/' expresion_cast
  183                         | expresion_multiplicativa '%' expresion_cast

  184 expresion_cast: expresion_unaria
  185               | '(' nombre_de_tipo ')' expresion_cast

  186 expresion_unaria: expresion_posfija
  187                 | MAS_MAS_O_MENOS_MENOS expresion_unaria
  188                 | operador_unario expresion_cast
  189                 | SIZEOF expresion_unaria
  190                 | SIZEOF '(' nombre_de_tipo ')'

  191 operador_unario: '&'
  192                | '*'
  193                | '+'
  194                | '-'
  195                | '~'
  196                | '!'

  197 expresion_posfija: expresion_primaria
  198                  | expresion_posfija '[' expresion ']'
  199                  | expresion_posfija '(' lista_expresiones_argumento ')'
  200                  | expresion_posfija '(' ')'
  201                  | expresion_posfija '.' IDENTIFICADOR
  202                  | expresion_posfija FLECHA IDENTIFICADOR
  203                  | expresion_posfija MAS_MAS_O_MENOS_MENOS

  204 expresion_primaria: IDENTIFICADOR
  205                   | constante
  206                   | LITERAL_CADENA
  207                   | '(' expresion ')'

  208 lista_expresiones_argumento: expresion_de_asignacion
  209                            | lista_expresiones_argumento ',' expresion_de_asignacion

  210 constante: CONSTANTE_ENTERA
  211          | CONSTANTE_CARACTER
  212          | CONSTANTE_REAL


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 196
'%' (37) 183
'&' (38) 170 191
'(' (40) 65 69 71 73 101 106 107 108 109 134 136 141 143 145 185 190
    199 200 207
')' (41) 65 69 71 73 101 106 107 108 109 134 136 141 143 145 185 190
    199 200 207
'*' (42) 75 181 192
'+' (43) 178 193
',' (44) 40 49 57 83 85 90 93 95 154 209
'-' (45) 179 194
'.' (46) 201
'/' (47) 182
':' (58) 51 52 117 119 121 160
';' (59) 19 20 43 122 123 143 145 148 149 151 152
'=' (61) 42 60 158
'?' (63) 160
'[' (91) 66 67 102 103 104 105 198
']' (93) 66 67 102 103 104 105 198
'^' (94) 168
'{' (123) 33 53 54 92 93 124 125
'|' (124) 166
'}' (125) 33 53 54 92 93 124 125
'~' (126) 195
error (256) 8
IDENTIFICADOR (258) 35 53 55 58 60 64 89 90 117 148 201 202 204
LITERAL_CADENA (259) 206
CONTINUE_O_BREAK (260) 149
CONSTANTE_ENTERA (261) 210
CONSTANTE_REAL (262) 212
CONSTANTE_CARACTER (263) 211
ESPECIFICADOR_DE_TIPOS (264) 28
CALIFICADOR_DE_TIPOS (265) 25 46 47 80 81
ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO (266) 23
ESPECIFICADOR_STRUCT_UNION (267) 35 36
OPERADOR_ASIGNACION (268) 157
IGUAL_O_DISTINTO (269) 172
SIMBOLO_RELACIONAL (270) 174
SIMBOLO_CORRIMIENTO (271) 176
MAS_MAS_O_MENOS_MENOS (272) 187 203
TRES_PUNTOS (273) 83
AND (274) 164
OR (275) 162
FLECHA (276) 202
ENUM (277) 53 54 55
WHILE (278) 141 143
DO (279) 143
FOR (280) 145
SWITCH (281) 136
CASE (282) 119
DEFAULT (283) 121
RETURN (284) 151 152
IF (285) 134
ELSE (286) 138
GOTO (287) 148
SIZEOF (288) 189 190
TYPEDEF (289) 31
ERROR_LEXICO (290) 6


No terminales con las reglas donde aparecen

$accept (58)
    en la izquierda: 0
unidad_de_programa (59)
    en la izquierda: 1 3, en la derecha: 0 3
$@1 (60)
    en la izquierda: 2, en la derecha: 3
unidad_de_traduccion (61)
    en la izquierda: 4 5 6 8, en la derecha: 3 8
$@2 (62)
    en la izquierda: 7, en la derecha: 8
declaracion_externa (63)
    en la izquierda: 9 10, en la derecha: 4
definicion_de_funcion (64)
    en la izquierda: 12 14 16 18, en la derecha: 9
$@3 (65)
    en la izquierda: 11, en la derecha: 12
$@4 (66)
    en la izquierda: 13, en la derecha: 14
$@5 (67)
    en la izquierda: 15, en la derecha: 16
$@6 (68)
    en la izquierda: 17, en la derecha: 18
declaracion (69)
    en la izquierda: 19 20, en la derecha: 10 21 22
lista_de_declaracion (70)
    en la izquierda: 21 22, en la derecha: 12 14 22 126
especificadores_de_declaracion (71)
    en la izquierda: 23 24 25, en la derecha: 12 16 19 20 26 86 87
    88
especificadores_de_declaracion_o_vacio (72)
    en la izquierda: 26 27, en la derecha: 23 24 25
especificador_de_tipo (73)
    en la izquierda: 28 29 30 31, en la derecha: 24 44 45
especificador_estructura_o_union (74)
    en la izquierda: 33 34, en la derecha: 29
$@7 (75)
    en la izquierda: 32, en la derecha: 33
a (76)
    en la izquierda: 35 36, en la derecha: 33 34
lista_declaraciones_struct (77)
    en la izquierda: 37 38, en la derecha: 33 38
lista_declaradores_init (78)
    en la izquierda: 39 40, en la derecha: 19 40
declarador_init (79)
    en la izquierda: 41 42, en la derecha: 39 40
declaracion_struct (80)
    en la izquierda: 43, en la derecha: 37 38
lista_calificador_especificador (81)
    en la izquierda: 44 45 46 47, en la derecha: 43 44 46 96 97
lista_declaradores_struct (82)
    en la izquierda: 48 49, en la derecha: 43 49
declarador_struct (83)
    en la izquierda: 50 51 52, en la derecha: 48 49
especificador_enum (84)
    en la izquierda: 53 54 55, en la derecha: 30
lista_de_enumerador (85)
    en la izquierda: 56 57, en la derecha: 53 54 57
enumerador (86)
    en la izquierda: 58 60, en la derecha: 56 57
$@8 (87)
    en la izquierda: 59, en la derecha: 60
declarador (88)
    en la izquierda: 61 62, en la derecha: 12 14 16 18 41 42 50 51
    65 86
declarador_directo (89)
    en la izquierda: 64 65, en la derecha: 61 62
$@9 (90)
    en la izquierda: 63, en la derecha: 64
R_declarador_directo (91)
    en la izquierda: 66 67 69 71 73 74, en la derecha: 64 65 66 67
    69 71 73
$@10 (92)
    en la izquierda: 68, en la derecha: 69
$@11 (93)
    en la izquierda: 70, en la derecha: 71
$@12 (94)
    en la izquierda: 72, en la derecha: 73
apuntador (95)
    en la izquierda: 75, en la derecha: 61 76 98 99
apuntador_aux (96)
    en la izquierda: 76 77, en la derecha: 75
apuntador_aux2 (97)
    en la izquierda: 78 79, en la derecha: 76 77
lista_calificadores_de_tipo (98)
    en la izquierda: 80 81, en la derecha: 78 81
lista_tipos_de_parametro (99)
    en la izquierda: 82 83, en la derecha: 69 106 107
lista_de_parametros (100)
    en la izquierda: 84 85, en la derecha: 82 83 85
declaracion_de_parametro (101)
    en la izquierda: 86 87 88, en la derecha: 84 85
lista_de_identificadores (102)
    en la izquierda: 89 90, en la derecha: 71 90
inicializador (103)
    en la izquierda: 91 92 93, en la derecha: 42 94 95
lista_de_inicializadores (104)
    en la izquierda: 94 95, en la derecha: 92 93 95
nombre_de_tipo (105)
    en la izquierda: 96 97, en la derecha: 185 190
declarador_abstracto (106)
    en la izquierda: 98 99 100, en la derecha: 87 96 101
declarador_abstracto_directo (107)
    en la izquierda: 101 102 103 104 105 106 107 108 109, en la derecha:
    99 100 102 104 106 108
sentencia (108)
    en la izquierda: 110 111 112 113 114 115, en la derecha: 5 117
    119 121 131 132 134 136 138 141 143 145
sentencia_etiquetada (109)
    en la izquierda: 117 119 121, en la derecha: 110
$@13 (110)
    en la izquierda: 116, en la derecha: 117
$@14 (111)
    en la izquierda: 118, en la derecha: 119
$@15 (112)
    en la izquierda: 120, en la derecha: 121
sentencia_expresion (113)
    en la izquierda: 122 123, en la derecha: 111
sentencia_compuesta (114)
    en la izquierda: 124 125, en la derecha: 12 14 16 18 112
X (115)
    en la izquierda: 126 127, en la derecha: 124 128 130
Y (116)
    en la izquierda: 128 129, en la derecha: 126
Z (117)
    en la izquierda: 130, en la derecha: 125
lista_de_sentencias (118)
    en la izquierda: 131 132, en la derecha: 128 130 132
sentencia_de_seleccion (119)
    en la izquierda: 134 136, en la derecha: 113
$@16 (120)
    en la izquierda: 133, en la derecha: 134
$@17 (121)
    en la izquierda: 135, en la derecha: 136
sentencia_de_seleccion_aux (122)
    en la izquierda: 138 139, en la derecha: 134
$@18 (123)
    en la izquierda: 137, en la derecha: 138
sentencia_de_iteracion (124)
    en la izquierda: 141 143 145, en la derecha: 114
$@19 (125)
    en la izquierda: 140, en la derecha: 141
$@20 (126)
    en la izquierda: 142, en la derecha: 143
$@21 (127)
    en la izquierda: 144, en la derecha: 145
expresion_o_vacio (128)
    en la izquierda: 146 147, en la derecha: 145
sentencia_de_salto (129)
    en la izquierda: 148 149 151 152, en la derecha: 115
$@22 (130)
    en la izquierda: 150, en la derecha: 151
expresion (131)
    en la izquierda: 153 154, en la derecha: 122 134 136 141 143 146
    151 154 160 198 207
expresion_de_asignacion (132)
    en la izquierda: 155 156, en la derecha: 91 153 154 156 208 209
operador_de_asignacion (133)
    en la izquierda: 157 158, en la derecha: 156
expresion_condicional (134)
    en la izquierda: 159 160, en la derecha: 51 52 60 66 102 103 119
    155 160
expresion_logica_or (135)
    en la izquierda: 161 162, en la derecha: 159 160 162
expresion_logica_and (136)
    en la izquierda: 163 164, en la derecha: 161 162 164
expresion_or_inclusivo (137)
    en la izquierda: 165 166, en la derecha: 163 164 166
expresion_or_exclusivo (138)
    en la izquierda: 167 168, en la derecha: 165 166 168
expresion_and (139)
    en la izquierda: 169 170, en la derecha: 167 168 170
expresion_de_igualdad (140)
    en la izquierda: 171 172, en la derecha: 169 170 172
expresion_relacional (141)
    en la izquierda: 173 174, en la derecha: 171 172 174
expresion_de_corrimiento (142)
    en la izquierda: 175 176, en la derecha: 173 174 176
expresion_aditiva (143)
    en la izquierda: 177 178 179, en la derecha: 175 176 178 179
expresion_multiplicativa (144)
    en la izquierda: 180 181 182 183, en la derecha: 177 178 179 181
    182 183
expresion_cast (145)
    en la izquierda: 184 185, en la derecha: 180 181 182 183 185 188
expresion_unaria (146)
    en la izquierda: 186 187 188 189 190, en la derecha: 156 184 187
    189
operador_unario (147)
    en la izquierda: 191 192 193 194 195 196, en la derecha: 188
expresion_posfija (148)
    en la izquierda: 197 198 199 200 201 202 203, en la derecha: 186
    198 199 200 201 202 203
expresion_primaria (149)
    en la izquierda: 204 205 206 207, en la derecha: 197
lista_expresiones_argumento (150)
    en la izquierda: 208 209, en la derecha: 199 209
constante (151)
    en la izquierda: 210 211 212, en la derecha: 205


estado 0

    0 $accept: . unidad_de_programa $end

    $default  reduce usando la regla 1 (unidad_de_programa)

    unidad_de_programa  ir al estado 1


estado 1

    0 $accept: unidad_de_programa . $end
    3 unidad_de_programa: unidad_de_programa . $@1 unidad_de_traduccion

    $end  desplazar e ir al estado 2

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 3


estado 2

    0 $accept: unidad_de_programa $end .

    $default  aceptar


estado 3

    3 unidad_de_programa: unidad_de_programa $@1 . unidad_de_traduccion

    error                                  desplazar e ir al estado 4
    IDENTIFICADOR                          desplazar e ir al estado 5
    LITERAL_CADENA                         desplazar e ir al estado 6
    CONTINUE_O_BREAK                       desplazar e ir al estado 7
    CONSTANTE_ENTERA                       desplazar e ir al estado 8
    CONSTANTE_REAL                         desplazar e ir al estado 9
    CONSTANTE_CARACTER                     desplazar e ir al estado 10
    ESPECIFICADOR_DE_TIPOS                 desplazar e ir al estado 11
    CALIFICADOR_DE_TIPOS                   desplazar e ir al estado 12
    ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO  desplazar e ir al estado 13
    ESPECIFICADOR_STRUCT_UNION             desplazar e ir al estado 14
    MAS_MAS_O_MENOS_MENOS                  desplazar e ir al estado 15
    ENUM                                   desplazar e ir al estado 16
    WHILE                                  desplazar e ir al estado 17
    DO                                     desplazar e ir al estado 18
    FOR                                    desplazar e ir al estado 19
    SWITCH                                 desplazar e ir al estado 20
    CASE                                   desplazar e ir al estado 21
    DEFAULT                                desplazar e ir al estado 22
    RETURN                                 desplazar e ir al estado 23
    IF                                     desplazar e ir al estado 24
    GOTO                                   desplazar e ir al estado 25
    SIZEOF                                 desplazar e ir al estado 26
    TYPEDEF                                desplazar e ir al estado 27
    ERROR_LEXICO                           desplazar e ir al estado 28
    ';'                                    desplazar e ir al estado 29
    '{'                                    desplazar e ir al estado 30
    '('                                    desplazar e ir al estado 31
    '*'                                    desplazar e ir al estado 32
    '&'                                    desplazar e ir al estado 33
    '+'                                    desplazar e ir al estado 34
    '-'                                    desplazar e ir al estado 35
    '~'                                    desplazar e ir al estado 36
    '!'                                    desplazar e ir al estado 37

    unidad_de_traduccion              ir al estado 38
    declaracion_externa               ir al estado 39
    definicion_de_funcion             ir al estado 40
    declaracion                       ir al estado 41
    especificadores_de_declaracion    ir al estado 42
    especificador_de_tipo             ir al estado 43
    especificador_estructura_o_union  ir al estado 44
    a                                 ir al estado 45
    especificador_enum                ir al estado 46
    declarador                        ir al estado 47
    declarador_directo                ir al estado 48
    apuntador                         ir al estado 49
    sentencia                         ir al estado 50
    sentencia_etiquetada              ir al estado 51
    sentencia_expresion               ir al estado 52
    sentencia_compuesta               ir al estado 53
    sentencia_de_seleccion            ir al estado 54
    sentencia_de_iteracion            ir al estado 55
    sentencia_de_salto                ir al estado 56
    expresion                         ir al estado 57
    expresion_de_asignacion           ir al estado 58
    expresion_condicional             ir al estado 59
    expresion_logica_or               ir al estado 60
    expresion_logica_and              ir al estado 61
    expresion_or_inclusivo            ir al estado 62
    expresion_or_exclusivo            ir al estado 63
    expresion_and                     ir al estado 64
    expresion_de_igualdad             ir al estado 65
    expresion_relacional              ir al estado 66
    expresion_de_corrimiento          ir al estado 67
    expresion_aditiva                 ir al estado 68
    expresion_multiplicativa          ir al estado 69
    expresion_cast                    ir al estado 70
    expresion_unaria                  ir al estado 71
    operador_unario                   ir al estado 72
    expresion_posfija                 ir al estado 73
    expresion_primaria                ir al estado 74
    constante                         ir al estado 75


estado 4

    8 unidad_de_traduccion: error . $@2 unidad_de_traduccion

    $default  reduce usando la regla 7 ($@2)

    $@2  ir al estado 76


estado 5

   64 declarador_directo: IDENTIFICADOR . $@9 R_declarador_directo
  117 sentencia_etiquetada: IDENTIFICADOR . $@13 ':' sentencia
  204 expresion_primaria: IDENTIFICADOR .

    ESPECIFICADOR_DE_TIPOS                 reduce usando la regla 63 ($@9)
    CALIFICADOR_DE_TIPOS                   reduce usando la regla 63 ($@9)
    ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO  reduce usando la regla 63 ($@9)
    ESPECIFICADOR_STRUCT_UNION             reduce usando la regla 63 ($@9)
    ENUM                                   reduce usando la regla 63 ($@9)
    TYPEDEF                                reduce usando la regla 63 ($@9)
    '{'                                    reduce usando la regla 63 ($@9)
    ':'                                    reduce usando la regla 116 ($@13)
    '('                                    reduce usando la regla 63 ($@9)
    '('                                    [reduce usando la regla 204 (expresion_primaria)]
    '['                                    reduce usando la regla 63 ($@9)
    '['                                    [reduce usando la regla 204 (expresion_primaria)]
    $default                               reduce usando la regla 204 (expresion_primaria)

    $@9   ir al estado 77
    $@13  ir al estado 78


estado 6

  206 expresion_primaria: LITERAL_CADENA .

    $default  reduce usando la regla 206 (expresion_primaria)


estado 7

  149 sentencia_de_salto: CONTINUE_O_BREAK . ';'

    ';'  desplazar e ir al estado 79


estado 8

  210 constante: CONSTANTE_ENTERA .

    $default  reduce usando la regla 210 (constante)


estado 9

  212 constante: CONSTANTE_REAL .

    $default  reduce usando la regla 212 (constante)


estado 10

  211 constante: CONSTANTE_CARACTER .

    $default  reduce usando la regla 211 (constante)


estado 11

   28 especificador_de_tipo: ESPECIFICADOR_DE_TIPOS .

    $default  reduce usando la regla 28 (especificador_de_tipo)


estado 12

   25 especificadores_de_declaracion: CALIFICADOR_DE_TIPOS . especificadores_de_declaracion_o_vacio

    ESPECIFICADOR_DE_TIPOS                 desplazar e ir al estado 11
    CALIFICADOR_DE_TIPOS                   desplazar e ir al estado 12
    ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO  desplazar e ir al estado 13
    ESPECIFICADOR_STRUCT_UNION             desplazar e ir al estado 14
    ENUM                                   desplazar e ir al estado 16
    TYPEDEF                                desplazar e ir al estado 27

    $default  reduce usando la regla 27 (especificadores_de_declaracion_o_vacio)

    especificadores_de_declaracion          ir al estado 80
    especificadores_de_declaracion_o_vacio  ir al estado 81
    especificador_de_tipo                   ir al estado 43
    especificador_estructura_o_union        ir al estado 44
    a                                       ir al estado 45
    especificador_enum                      ir al estado 46


estado 13

   23 especificadores_de_declaracion: ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO . especificadores_de_declaracion_o_vacio

    ESPECIFICADOR_DE_TIPOS                 desplazar e ir al estado 11
    CALIFICADOR_DE_TIPOS                   desplazar e ir al estado 12
    ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO  desplazar e ir al estado 13
    ESPECIFICADOR_STRUCT_UNION             desplazar e ir al estado 14
    ENUM                                   desplazar e ir al estado 16
    TYPEDEF                                desplazar e ir al estado 27

    $default  reduce usando la regla 27 (especificadores_de_declaracion_o_vacio)

    especificadores_de_declaracion          ir al estado 80
    especificadores_de_declaracion_o_vacio  ir al estado 82
    especificador_de_tipo                   ir al estado 43
    especificador_estructura_o_union        ir al estado 44
    a                                       ir al estado 45
    especificador_enum                      ir al estado 46


estado 14

   35 a: ESPECIFICADOR_STRUCT_UNION . IDENTIFICADOR
   36  | ESPECIFICADOR_STRUCT_UNION .

    IDENTIFICADOR  desplazar e ir al estado 83

    IDENTIFICADOR  [reduce usando la regla 36 (a)]
    $default       reduce usando la regla 36 (a)


estado 15

  187 expresion_unaria: MAS_MAS_O_MENOS_MENOS . expresion_unaria

    IDENTIFICADOR          desplazar e ir al estado 84
    LITERAL_CADENA         desplazar e ir al estado 6
    CONSTANTE_ENTERA       desplazar e ir al estado 8
    CONSTANTE_REAL         desplazar e ir al estado 9
    CONSTANTE_CARACTER     desplazar e ir al estado 10
    MAS_MAS_O_MENOS_MENOS  desplazar e ir al estado 15
    SIZEOF                 desplazar e ir al estado 26
    '('                    desplazar e ir al estado 85
    '*'                    desplazar e ir al estado 86
    '&'                    desplazar e ir al estado 33
    '+'                    desplazar e ir al estado 34
    '-'                    desplazar e ir al estado 35
    '~'                    desplazar e ir al estado 36
    '!'                    desplazar e ir al estado 37

    expresion_unaria    ir al estado 87
    operador_unario     ir al estado 72
    expresion_posfija   ir al estado 73
    expresion_primaria  ir al estado 74
    constante           ir al estado 75


estado 16

   53 especificador_enum: ENUM . IDENTIFICADOR '{' lista_de_enumerador '}'
   54                   | ENUM . '{' lista_de_enumerador '}'
   55                   | ENUM . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 88
    '{'            desplazar e ir al estado 89


estado 17

  141 sentencia_de_iteracion: WHILE . $@19 '(' expresion ')' sentencia

    $default  reduce usando la regla 140 ($@19)

    $@19  ir al estado 90


estado 18

  143 sentencia_de_iteracion: DO . $@20 sentencia WHILE '(' expresion ')' ';'

    $default  reduce usando la regla 142 ($@20)

    $@20  ir al estado 91


estado 19

  145 sentencia_de_iteracion: FOR . $@21 '(' expresion_o_vacio ';' expresion_o_vacio ';' expresion_o_vacio ')' sentencia

    $default  reduce usando la regla 144 ($@21)

    $@21  ir al estado 92


estado 20

  136 sentencia_de_seleccion: SWITCH . $@17 '(' expresion ')' sentencia

    $default  reduce usando la regla 135 ($@17)

    $@17  ir al estado 93


estado 21

  119 sentencia_etiquetada: CASE . $@14 expresion_condicional ':' sentencia

    $default  reduce usando la regla 118 ($@14)

    $@14  ir al estado 94


estado 22

  121 sentencia_etiquetada: DEFAULT . $@15 ':' sentencia

    $default  reduce usando la regla 120 ($@15)

    $@15  ir al estado 95


estado 23

  151 sentencia_de_salto: RETURN . $@22 expresion ';'
  152                   | RETURN . ';'

    ';'  desplazar e ir al estado 96

    $default  reduce usando la regla 150 ($@22)

    $@22  ir al estado 97


estado 24

  134 sentencia_de_seleccion: IF . $@16 '(' expresion ')' sentencia sentencia_de_seleccion_aux

    $default  reduce usando la regla 133 ($@16)

    $@16  ir al estado 98


estado 25

  148 sentencia_de_salto: GOTO . IDENTIFICADOR ';'

    IDENTIFICADOR  desplazar e ir al estado 99


estado 26

  189 expresion_unaria: SIZEOF . expresion_unaria
  190                 | SIZEOF . '(' nombre_de_tipo ')'
